--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/AbpCompanyName.AbpProjectName.Web.Mvc.csproj
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/AbpCompanyName.AbpProjectName.Web.Mvc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <PackageTargetFallback>$(PackageTargetFallback);dotnet5.6;portable-net45+win8</PackageTargetFallback>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>AbpCompanyName.AbpProjectName.Web.Mvc</AssemblyName>
@@ -34,25 +34,35 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="1.1.1">
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="AspNet.Security.OpenIdConnect.Server" Version="1.0.0" />
+    <PackageReference Include="AspNet.Security.OpenIdConnect.Server" Version="1.0.1" />
     <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.2.0" />
     <PackageReference Include="Castle.LoggingFacility.MsLogging" Version="2.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
+
+    <!-- These packages are temporarily removed -->
+    <!-- <PackageReference Include="Abp.Castle.Log4Net" Version="2.3.0" />
     <PackageReference Include="Abp.HangFire" Version="2.3.0" />
     <PackageReference Include="Abp.RedisCache" Version="2.3.0" />
-    <PackageReference Include="Abp.Castle.Log4Net" Version="2.3.0" />
+    -->
+
+    <!-- These packages are temporarily added -->
+    <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Hangfire.Core" Version="1.6.15" />
+    <PackageReference Include="StackExchange.Redis.StrongName" Version="1.2.6" />
+
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
@@ -61,13 +71,52 @@
   </ItemGroup>
 
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.0" />
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.0.0" />
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
+    <!-- These references are temporarily added -->
+    <Reference Include="Abp">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp\bin\Debug\netstandard2.0\Abp.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.AspNetCore">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.AspNetCore\bin\Debug\netstandard2.0\Abp.AspNetCore.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.AutoMapper">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.AutoMapper\bin\Debug\netstandard2.0\Abp.AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.Castle.Log4Net">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.Castle.Log4Net\bin\Debug\netstandard2.0\Abp.Castle.Log4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.EntityFramework.Common">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.EntityFramework.Common\bin\Debug\netstandard2.0\Abp.EntityFramework.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.EntityFrameworkCore">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.EntityFrameworkCore\bin\Debug\netstandard2.0\Abp.EntityFrameworkCore.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.HangFire">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.HangFire\bin\Debug\netstandard2.0\Abp.HangFire.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.RedisCache">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.RedisCache\bin\Debug\netstandard2.0\Abp.RedisCache.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.Web.Common">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.Web.Common\bin\Debug\netstandard2.0\Abp.Web.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.Zero.Common">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.Zero.Common\bin\Debug\netstandard2.0\Abp.Zero.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.ZeroCore">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.ZeroCore\bin\Debug\netstandard2.0\Abp.ZeroCore.dll</HintPath>
+    </Reference>
+    <Reference Include="Abp.ZeroCore.EntityFrameworkCore">
+      <HintPath>..\..\..\..\aspnetboilerplate\src\Abp.ZeroCore.EntityFrameworkCore\bin\Debug\netstandard2.0\Abp.ZeroCore.EntityFrameworkCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\view-resources\Views\_Bundles\" />
   </ItemGroup>
 
